--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,1 @@
-{
-  "version": 2,
-  "routes": [
-    { "src": "/api/availability", "dest": "/api/availability.js" }
-  ],
-  "functions": {
-    "api/*.js": {
-      "runtime": "nodejs20.x"
-    }
-  }
-}
+{ "version": 2, "routes": [ { "src": "/api/availability", "dest": "/api/availability.js" } ] }
