--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
   "name": "dvds-availability",
   "private": true,
-  "type": "module",
-  "scripts": {
-    "test": "node --test tests"
-  }
+  "type": "module"
 }
