Add working test handler for API availability

--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
   "name": "dvds-availability",
-  "private": true
+  "version": "1.0.0",
+  "private": true,
+  "description": "Serverless test handler for Deer Valley Driving School availability API",
+  "license": "MIT"
 }
