--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
   "name": "dvds-availability",
-  "private": true
+  "private": true,
+  "type": "module",
+  "engines": {
+    "node": "20.x"
+  },
+  "dependencies": {
+    "node-fetch": "^3.3.2"
+  }
 }
