--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+  "functions": { "api/**/*.js": { "runtime": "vercel/node@3.0.0" } },
   "routes": [
     { "src": "^/api/availability$", "dest": "api/availability.js" },
     { "src": "^/api/ping$", "dest": "api/ping.js" }
