--- a/package.json
+++ b/package.json
@@ -1,15 +1,5 @@
 {
   "name": "dvds-availability",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "14.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  }
+  "version": "1.0.0",
+  "private": true
 }
