Enforce strict location calendar mapping

--- a/location-config.json
+++ b/location-config.json
@@ -1,16 +1,9 @@
 {
   "main": {
-    "ahwatukee": [],
-    "apache junction": [],
-    "casa grande": [],
-    "cave creek": [],
+    "scottsdale": [9880609, 5812644],
     "chandler": [],
-    "downtown phoenix": [],
+    "anthem": [],
     "gilbert": [],
-    "mesa": [],
-    "queen creek": [],
-    "san tan valley": [],
-    "scottsdale": [],
     "tempe": []
   },
   "parents": {
