--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,8 @@
     "api/**/*.js": {
       "runtime": "nodejs20.x",
       "includeFiles": [
-        "city-types.json",
-        "location-config.json"
+        "./city-types.json",
+        "./location-config.json"
       ]
     }
   },
