Fix Vercel config schema and serve root UI

--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,9 @@
 {
   "version": 2,
-  "public": true,
   "functions": {
     "api/**/*.js": {
       "runtime": "nodejs20.x",
-      "includeFiles": [
-        "city-types.json",
-        "location-config.json"
-      ]
+      "includeFiles": "{city-types.json,location-config.json}"
     }
   },
   "routes": [
