Simplify deployment config and bundle JSON data

--- a/location-config.json
+++ b/location-config.json
@@ -1,6 +1,104 @@
 {
-  "main": {
-    "scottsdale": [9880609, 5812644]
+  "awatukee": {
+    "label": "Awatukee",
+    "account": "students",
+    "owner": 23214568,
+    "baseUrl": "https://app.acuityscheduling.com/schedule.php"
   },
-  "parents": {}
+  "apache-junction": {
+    "label": "Apache Junction",
+    "account": "students",
+    "owner": 23214568,
+    "baseUrl": "https://app.acuityscheduling.com/schedule.php"
+  },
+  "casa-grande": {
+    "label": "Casa Grande",
+    "account": "students",
+    "owner": 23214568,
+    "baseUrl": "https://app.acuityscheduling.com/schedule.php"
+  },
+  "cave-creek": {
+    "label": "Cave Creek",
+    "account": "students",
+    "owner": 23214568,
+    "baseUrl": "https://app.acuityscheduling.com/schedule.php"
+  },
+  "downtown-phoenix": {
+    "label": "Downtown Phoenix",
+    "account": "students",
+    "owner": 23214568,
+    "baseUrl": "https://app.acuityscheduling.com/schedule.php"
+  },
+  "gilbert": {
+    "label": "Gilbert",
+    "account": "students",
+    "owner": 23214568,
+    "baseUrl": "https://app.acuityscheduling.com/schedule.php"
+  },
+  "mesa": {
+    "label": "Mesa",
+    "account": "students",
+    "owner": 23214568,
+    "baseUrl": "https://app.acuityscheduling.com/schedule.php"
+  },
+  "queen-creek": {
+    "label": "Queen Creek",
+    "account": "students",
+    "owner": 23214568,
+    "baseUrl": "https://app.acuityscheduling.com/schedule.php"
+  },
+  "san-tan-valley": {
+    "label": "San Tan Valley",
+    "account": "students",
+    "owner": 23214568,
+    "baseUrl": "https://app.acuityscheduling.com/schedule.php"
+  },
+  "scottsdale": {
+    "label": "Scottsdale",
+    "account": "students",
+    "owner": 23214568,
+    "baseUrl": "https://app.acuityscheduling.com/schedule.php"
+  },
+  "tempe": {
+    "label": "Tempe",
+    "account": "students",
+    "owner": 23214568,
+    "baseUrl": "https://app.acuityscheduling.com/schedule.php"
+  },
+  "anthem": {
+    "label": "Anthem",
+    "account": "parents",
+    "baseUrl": "https://DeerValleyDrivingSchool.as.me/"
+  },
+  "glendale": {
+    "label": "Glendale",
+    "account": "parents",
+    "baseUrl": "https://DeerValleyDrivingSchool.as.me/"
+  },
+  "north-phoenix": {
+    "label": "North Phoenix",
+    "account": "parents",
+    "baseUrl": "https://DeerValleyDrivingSchool.as.me/"
+  },
+  "peoria": {
+    "label": "Peoria",
+    "account": "parents",
+    "baseUrl": "https://DeerValleyDrivingSchool.as.me/"
+  },
+  "sun-city": {
+    "label": "Sun City",
+    "account": "parents",
+    "baseUrl": "https://DeerValleyDrivingSchool.as.me/"
+  },
+  "surprise": {
+    "label": "Surprise",
+    "account": "parents",
+    "baseUrl": "https://DeerValleyDrivingSchool.as.me/"
+  },
+  "chandler": {
+    "label": "Chandler",
+    "account": "parents",
+    "owner": 23214568,
+    "baseUrl": "https://app.acuityscheduling.com/schedule.php"
+  }
 }
