chore: set chandler to main account

--- a/location-config.json
+++ b/location-config.json
@@ -97,7 +97,7 @@
   },
   "chandler": {
     "label": "Chandler",
-    "account": "parents",
+    "account": "main",
     "owner": 23214568,
     "baseUrl": "https://app.acuityscheduling.com/schedule.php"
   }
